optimize(flexlb): preserve full-fleet queued routing